tests/errors/var-already-defined.ja
procedure main()
    int x
    int x
    skip
